--- a/day04/ex00/ImagesToChar/README
+++ b/day04/ex00/ImagesToChar/README
@@ -1,9 +1,20 @@
-# First step need to compile the projects
+>=>>=>    >=>       >=> >======>         >======>   >======>     >=> >==>    >=> >===>>=====> >=======> >======>
+>>   >=>  >> >=>   >>=> >=>    >=>       >=>    >=> >=>    >=>   >=> >> >=>  >=>      >=>     >=>       >=>    >=>
+>>    >=> >=> >=> > >=> >=>    >=>       >=>    >=> >=>    >=>   >=> >=> >=> >=>      >=>     >=>       >=>    >=>
+>==>>=>   >=>  >=>  >=> >======>         >======>   >> >==>      >=> >=>  >=>>=>      >=>     >=====>   >> >==>
+>>    >=> >=>   >>  >=> >=>              >=>        >=>  >=>     >=> >=>   > >=>      >=>     >=>       >=>  >=>
+>>     >> >=>       >=> >=>              >=>        >=>    >=>   >=> >=>    >>=>      >=>     >=>       >=>    >=>
+>===>>=>  >=>       >=> >=>              >=>        >=>      >=> >=> >=>     >=>      >=>     >=======> >=>      >=>
+
+# First step you need to compile the projects
 ```
     $ javac -d target src/java/fr/leet/printer/*/*
 ```
 # After that you need to run using this command
 ```
-    # black white example.bmp
+    #                                      white black example.bmp
+    #                                          |     |      | 
+    #                                          ----  ---    |
+    #                                             |    |    |
     $ java -cp target fr.leet.printer.app.Program '*' '-' it.bmp
 ```
