--- a/day04/ex00/ImagesToChar/README
+++ b/day04/ex00/ImagesToChar/README
@@ -1,7 +1,9 @@
+<pre>
 .----. .-.   .-..----.    .----. .----. .-..-. .-. .---. .----..----. 
 | {}  }|  `.'  || {}  }   | {}  }| {}  }| ||  `| |{_   _}| {_  | {}  }
 | {}  }| |\ /| || .--'    | .--' | .-. \| || |\  |  | |  | {__ | .-. \
 `----' `-' ` `-'`-'       `-'    `-' `-'`-'`-' `-'  `-'  `----'`-' `-'
+<pre>
 
 # First step you need to compile the projects
 
